--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "firebase": "^10.5.2",
     "jquery": "^3.7.1",
@@ -28,6 +29,7 @@
     "uuid": "^9.0.1",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.7",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.0.3",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-carousel": "^0.3.1",
