--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^10.5.2",
     "jquery": "^3.7.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "plugins": "^0.4.2",
     "slick-carousel": "^1.8.1",
     "stream": "^0.0.2",
@@ -36,7 +37,6 @@
     "vue3-cookies": "^1.0.6",
     "vue3-popper": "^1.5.0",
     "vue3-tags-input": "^1.0.12",
-
     "vuex": "^4.1.0",
     "yup": "^1.3.2"
   },
